# Static-Dynamic-SC-Correctness-2025-Artifact

./: .gitmodules  README.md  schema_v1.json
classification-quality/: CMakeLists.txt  README.md  build_apptainer_images.sh  job_classification_quality.sh  job_proxyapps.sh  lit.cfg  lit.site.cfg.in  litify.sh  parse_results.sh  run_proxyapps.sh  run_tests.sh
classification-quality/MBB/level1/RMA/: Correct-fence-accumulate_bufread-001.c  Correct-fence-get_get-001.c  Correct-fence-put_bufread-001.c  Correct-lockallflush-accumulate_get-001.c  Correct-lockallflush-put_get-001.c  Correct-lockunlock-get_bufwrite-001.c  LocalConcurrency-lockallflush-accumulate_get-001.c  LocalConcurrency-lockallflush-put_get-001.c  LocalConcurrency-rmarequest-rget_bufwrite-001.c
classification-quality/MBB/level2/COLL/: Correct-mpi_allreduce-001.c  Correct-mpi_alltoall-mpi_alltoall-001.c  Correct-mpi_barrier-001.c  Correct-mpi_exscan-mpi_exscan-001.c  Correct-mpi_ireduce-mpi_ireduce-001.c  Correct-mpi_reduce-mpi_reduce-001.c  LocalConcurrency-mpi_ibcast-001.c  LocalConcurrency-mpi_igather-001.c
classification-quality/MBB/level2/P2P/: Correct-mpi_precv_init-001.c  Correct-mpi_send-001.c  Correct-mpi_send_init-001.c  LocalConcurrency-send-mpi_isend-001.c  LocalConcurrency-send-mpi_ssend_init-001.c
classification-quality/MBB/level2/RMA/: Correct-fence-bufread_get_accumulate-001.c  Correct-lockallflush-bufwrite_accumulate-001.c  Correct-lockallflush-bufwrite_rget_accumulate-001.c  Correct-lockallflush-fetch_and_op_accumulate-001.c  Correct-lockallflush-fetch_and_op_rget_accumulate-001.c  Correct-lockallflush-fetch_and_op_rput-001.c  Correct-lockallflush-put_put-001.c  Correct-lockallflush-raccumulate_compare_and_swap-001.c  Correct-lockallflush-raccumulate_rput-001.c  Correct-lockallflush-rget_accumulate_rput-001.c  Correct-lockallflushlocal-compare_and_swap_rget-001.c  Correct-lockallflushlocal-raccumulate_get-001.c  Correct-lockallflushlocal-rput_rget-001.c  Correct-lockflush-bufwrite_get-001.c  Correct-lockflush-rget_rget_accumulate-001.c  Correct-lockflushlocal-get_accumulate_bufread-001.c  Correct-lockflushlocal-get_get-001.c  Correct-lockflushlocal-get_rget-001.c  Correct-lockflushlocal-rget_get-001.c  Correct-lockunlock-compare_and_swap_bufwrite-001.c  Correct-lockunlock-raccumulate_bufwrite-001.c  LocalConcurrency-fence-rget_bufwrite-001.c  LocalConcurrency-lockallflushlocal-fetch_and_op_rget-001.c  LocalConcurrency-lockflush-rget_raccumulate-001.c  LocalConcurrency-lockflushlocal-rget_rget-001.c  LocalConcurrency-lockunlock-get_accumulate_bufwrite-001.c
classification-quality/MBB/level32/COLL/: Correct-mpi_allgather-mpi_allgather-001.c  Correct-mpi_barrier-mpi_barrier-001.c  Correct-mpi_cart_create-mpi_cart_get-001.c  Correct-mpi_iallreduce-mpi_iallreduce-001.c  Correct-mpi_ireduce-001.c  Correct-mpi_reduce_scatter_block-001.c  Correct-mpi_scan-001.c  Correct-mpi_scan-mpi_scan-001.c  LocalConcurrency-mpi_iscan-001.c  LocalConcurrency-mpi_iscatter-001.c
classification-quality/MBB/level32/P2P/: Correct-mpi_imrecv-001.c  Correct-mpi_recv_init-001.c  Correct-mpi_ssend-001.c  LocalConcurrency-send-mpi_psend_init-001.c
classification-quality/MBB/level32/RMA/: Correct-fence-accumulate_accumulate-001.c  Correct-fence-accumulate_bufwrite-001.c  (+1026 more)
classification-quality/RRB/overview/: overview.tex
classification-quality/newTestCases/: 001-no-fp.c  002-yes-unnown.c
classification-quality/newTestCases/gpuSpecificNVSHMEM/: 002-nvshmem-conflict-putnbi-store-local-yes.cpp
classification-quality/newTestCases/implementationProblems/: readme.md
classification-quality/newTestCases/useCaseTestCases/: readme.md
classification-quality/overview/: overview.tex
classification-quality/proxyApps/PRK/: .gitignore
classification-quality/proxyApps/TeaLeaf/: .gitignore  CMakeLists.txt  build.sh  myParser.sh
classification-quality/proxyApps/miniMD-RMA/: README.md
classification-quality/proxyApps/miniVite/: Makefile
classification-quality/proxyApps/miniWeather/: .gitignore
classification-quality/proxyApps/minq/: COPYING  COPYRIGHT  Makefile  README.md  minq.cpp  orthogonalize.hpp  overlap.hpp  randomize.hpp  run.hpp  subspace_diagonalization.hpp
classification-quality/proxyApps/shorgpu/: .gitignore  LICENSE  README.md  makefile
classification-quality/proxyApps/sphexa/: build.sh
classification-quality/reproducerTests/: mlirTranformerError-no.cpp  waitAll-no.c
classification-quality/results/: results_mbb_parsed  results_rrb_parsed
classification-quality/results/results_mbb/: results.csv
classification-quality/results/results_rrb/: results.csv
classification-quality/stash/: 023-MPI-static-request-in-array-local-yes.c  024-MPI-static-request-in-array-local-no.c  027-MPI-static-mult-request-local-yes.c  028-MPI-static-mult-request-local-no.c
classification-quality/util/: generate.py  parse_results.py  run_test.py
classification-quality/util/apptainer/: Apptainer.cover.def  Apptainer.must.def  Apptainer.parcoach.def  Apptainer.rmasanitizer.def  Apptainer.spmdir.def  common.sh  requirements.txt  shmem.sh  time-wrapper.sh
(+6863 files in other folders)
